--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -332,7 +332,8 @@ ul.list-social li {
 }
 
 /* Recherche - Blocs de recherche*/
-.path-recherche {
+.path-recherche,
+.path-bibliographie {
   .views-exposed-form {
     width: 83%;
     float: left;
