--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -360,12 +360,15 @@ ul.list-social li {
 .facet-item__value {
   text-transform: uppercase;
 }
-
+/* réinitialiser */
 .path-bibliographie #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493 {
   float: left;
   display: inline-block;
 }
-
+/* bloc presentation section reference biblio */
+#block-block-content-c1ce5120-b8b3-43b7-89ef-432122f6504d {
+	clear: both;
+} 
 
 /* Accueil - Recherche avec facette */
 /* Mettre le formulaire pleine largeur, réparti entre 3 éléments:  15%/70%/15% 
