Add2any sur ref biblio

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -578,12 +578,13 @@ contextual-region block block-views block-views-exposed-filter-blockenvironnemen
 }
 
 
-#block-addtoanybuttons-2 {
+#block-addtoanybuttons-2,
+#block-addtoanybuttons-3,
+#block-addtoanybuttons-4 {
   margin-bottom: 0;
   display: inline-block;
   float: right;
 }
-
 
 
 
