Taxonomy: virer effet secondaire sur menu contextuel

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1842,7 +1842,7 @@ background: transparent;
 /* Taxonomie Listes */
 .path-taxonomy {
   ul.links {
-    display: block;
+/*    display: block;*/
     clear: both;
     position: absolute;
     bottom: 0;
