--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1443,7 +1443,7 @@ div.region-content #edit-crise-facet {
 /* Mise en page des Vertical Tabs */
 .tabbable {
   background-color:#dff0d8;
-  
+  border: 1px solid #86BC42;
   .nav-stacked {
 /*    width: 20%;
     float: left;*/
