--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1442,7 +1442,7 @@ div.region-content #edit-crise-facet {
 
 /* Mise en page des Vertical Tabs */
 .tabbable {
-  background-color:#dff0d8;
+  background-color: #fff;
   border: 1px solid #86BC42;
   .nav-stacked {
 /*    width: 20%;
