Appliquer le format Accueil Groupe sur les autres tableaux similaires

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1856,7 +1856,8 @@ background: transparent;
 /**
 * Modèle associé + Services associés sur Besoins
 */
-.view-entity-reference-vs-besoin {
+.view-entity-reference-vs-besoin,
+.view-entity-reference-vs-groupe {
   .view-content {
     text-align:center;
   }
