--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -69,8 +69,8 @@ a:hover, a:focus, a:active {
     outline: none !important;
     color: #86BC42;
 }
-.page .field--name-body,
-.page .field--name-field-citation {
+.field--name-body,
+.field--name-field-citation {
   a {
     color: #86BC42;
   }
