Création du compte - correctifs
- correction couleur de la section Aide (conditions d'utilisaiton)
- Titre des champs taxos montrés en double

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1598,8 +1598,15 @@ ul.quicktabs-tabs li.active a {
     position: relative;
     margin-right: 1em;
 }
+/* Visible dans les conditions d'utilisation du site à la création du compte */
+.help-block {
+  color: #657184;
+}
+/* Titre des champs taxos en double */
+.path-user .field--type-entity-reference legend {
+  display: none;
+}
 
-/* titre sections */
 
 
 /* Profil Utilisateur*/
