--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1079,6 +1079,7 @@ Recherche, Modeles, Services, Ref Biblio
 /* Logo */
 .logo {
   max-width: 80px; /* TEMP */
+  z-index: 3; /* Fixe un bug sur tablette */
 }
 .name {
   display: none;
