Fix pour la recherche

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1402,6 +1402,7 @@ nav.pager-nav {
 }
 div.region-content #edit-crise-facet {
   display: block;
+  min-width: 100px;
 }
 
 /* Glossaire - Bonifications */
@@ -2060,3 +2061,6 @@ temp - Exception pour Page Recherche - Faire de la place pour  bouton réinitial
 }
 
 */
+#views-exposed-form-environnement-recherche-page-1 .form-type-search-api-autocomplete {
+  width: 80%;
+}
