--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -212,8 +212,8 @@ ul.js-facets-checkbox-links {
 /*.breadcrumb-content-inner .gva-breadcrumb-content .gva-block-breadcrumb .breadcrumb-style */
 .title_breadcrumb {
     background-color: #F6F6F6;
-    padding: 40px 0 30px;
-    margin-bottom: 45px;
+    padding: 30px 0;
+    margin-bottom: 35px;
     position: relative;
 }
 /* Exceptions */
@@ -292,6 +292,7 @@ ul.js-facets-checkbox-links {
 
 ul.menu.menu--menu-secondaire > li {
     display: inline-block;
+    padding: 0; /* enlève 6px */
 }
 
 /*
@@ -320,7 +321,9 @@ ul.menu.menu--menu-secondaire > li {
   margin-top: 15px;
   margin-bottom: 30px;
 }
-
+.alert {
+  margin-bottom:0;
+}
 /**
 * Blocs headers
 */
