--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1089,12 +1089,18 @@ Recherche, Modeles, Services, Ref Biblio
 }
 
 /* Icones dans Fil Ariane, sur Besoin */
+/* Centrer Icone verticalement
+   Fonctionne avec et sans icône */
 #block-contenufield {
-  float: left;
-  padding-right: 30px;
-  margin-bottom: 0;
+    float: left;
+    padding-right: 30px;
+    margin-bottom: 0;
+    margin-top: -30px;
+    padding-top: 15px;
+    margin-bottom: -15px;
+    line-height: 1;
+/*    display: none; */
 }
-
 
 /* Logo */
 .logo {
@@ -1542,7 +1548,7 @@ div.region-content #edit-crise-facet {
 
 /* Glossaire */
 .view-glossaire {
-  margin-top: 2em;
+  margin-top: 25px;/* 10px déjà présent = 35px */
   .views-field-view-node a {
     border: 1px solid #86BC42;
     border-radius: 8px;
