Barre grise: aligner boutons

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -623,6 +623,11 @@ Addtoany5 = Medias
   float: right;
 }
 
+.addtoany_list {
+  line-height: 20px;
+  /* option: aligner top avec vertical-align: top; */
+}
+
 
 
 /* Région Aide/Alertes */
@@ -1744,7 +1749,7 @@ ul.quicktabs-tabs li.active a {
   float: right;
   border-radius: 4px;
   margin-right: 4px;
-  margin-top: 4px;
+  margin-top: 3px; /**/
   font-size: 0;
 }
 .crise-flags a::before {
@@ -1938,9 +1943,7 @@ background: transparent;
   margin-bottom: 60px;
   border-bottom: 2px solid #86BC42;
 }
-#block-addtoanybuttons-3 {
-  float:right;
-}
+
 
 
 /* Médias */
