--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -182,6 +182,119 @@ ul.js-facets-checkbox-links {
 
 
 /**
+* Typographie
+*/
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Poppins",sans-serif;
+    font-weight: 600;
+    line-height: 1.1;
+    color: #262C38;
+}
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+h4, .h4, h5, .h5, h6, .h6 {
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+h4, h5 {
+    line-height: 1.4;
+}
+h1, .h1 {
+    font-size: 32px;
+}
+h2, .h2 {
+    font-size: 28px;
+}
+h3, .h3 {
+    font-size: 22px;
+}
+
+h4, .h4 {
+    font-size: 18px;
+}
+h5, .h5 {
+    font-size: 16px;
+}
+.margin-bottom-30 {
+    margin-bottom: 30px !important;
+}
+.text-white {
+    color: #fff !important;
+}
+.bg-theme {
+    background: #86BC42;
+}
+.bg-black {
+    background: #333333;
+}
+.dropcap {
+    display: block;
+    float: left;
+    font-size: 40px;
+    line-height: 34px;
+    color: #444;
+    margin: 6px 8px 0 0;
+}
+.dropcap.border-dropcap {
+    border: 2px solid #444;
+    width: 46px;
+    height: 46px;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    margin: 8px 12px 0 0;
+}
+.dropcap.circle-dropcap {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 2px solid #444;
+    width: 46px;
+    height: 46px;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    margin: 8px 12px 0 0;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+ul, ol {
+    margin-top: 0;
+    margin-bottom: 14px;
+}
+ul li {
+    list-style: inherit;
+}
+
+
+ul {
+    margin: 0;
+    padding-left: 30px;
+}
+
+
+/**
 * Regions
 */
 .region-content {
@@ -1136,118 +1249,6 @@ Recherche, Modeles, Services, Ref Biblio
 }
 
 
-/**
-* Typographie
-*/
-
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: "Poppins",sans-serif;
-    font-weight: 600;
-    line-height: 1.1;
-    color: #262C38;
-}
-h1, .h1, h2, .h2, h3, .h3 {
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
-h4, .h4, h5, .h5, h6, .h6 {
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
-h4, h5 {
-    line-height: 1.4;
-}
-h1, .h1 {
-    font-size: 32px;
-}
-h2, .h2 {
-    font-size: 28px;
-}
-h3, .h3 {
-    font-size: 22px;
-}
-
-h4, .h4 {
-    font-size: 18px;
-}
-h5, .h5 {
-    font-size: 16px;
-}
-.margin-bottom-30 {
-    margin-bottom: 30px !important;
-}
-.text-white {
-    color: #fff !important;
-}
-.bg-theme {
-    background: #86BC42;
-}
-.bg-black {
-    background: #333333;
-}
-.dropcap {
-    display: block;
-    float: left;
-    font-size: 40px;
-    line-height: 34px;
-    color: #444;
-    margin: 6px 8px 0 0;
-}
-.dropcap.border-dropcap {
-    border: 2px solid #444;
-    width: 46px;
-    height: 46px;
-    font-size: 28px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
-    margin: 8px 12px 0 0;
-}
-.dropcap.circle-dropcap {
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border: 2px solid #444;
-    width: 46px;
-    height: 46px;
-    font-size: 28px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
-    margin: 8px 12px 0 0;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-}
-
-ul, ol {
-    margin-top: 0;
-    margin-bottom: 14px;
-}
-ul li {
-    list-style: inherit;
-}
-
-
-ul {
-    margin: 0;
-    padding-left: 30px;
-}
-
 /* Label des champs, label des EVA */
 .field--label,
 .region-page-bottom h2.block-title,
@@ -1966,9 +1967,11 @@ audio {
 /*************************************************
 *
 * Responsive @media 
-*/
+*
+**************************************************/
 
-/* mobile */
+/* 1- mobile */
+
 @media (max-width: 460px) {
   /* donner pleine largeur aux items du menu secondaire*/
   ul.menu.menu--menu-secondaire > li {
@@ -1976,7 +1979,6 @@ audio {
     width: 100%;
     text-align: center;
   }
-
   /* Sur cellulaire, passer pleine largeur, aligne à gauche */
   #block-textepresentationsite {
       margin-bottom: 0;
@@ -1990,45 +1992,44 @@ audio {
   }
 
 }
-/* col-xs // 0-768 */
-@media (max-width: 768px) {
 
-/* Faire flotter le menu à droite sur mobile seulement (desktop, à gauche)*/
+/* 2-Tablette et - // col-xs // 0-768 */
+@media (max-width: 768px) {
+  /* Faire flotter le menu à droite sur mobile seulement (desktop, à gauche)*/
   #block-crise-main-menu {
     position: relative;
     padding-right: 90px;
     float: right;
   }
+  .menu--menu-secondaire > li > a {
+    width: 100%;
+  }
+  /* rendre menu primaire pleine largeur */
+  #block-crise-main-menu {
+    float: none;
+  }
+  /* Annuler l'enchassement du slogan */
+  /* 768px Safari Tablette : menu collé car le menu mobile n'est pas déclenché
+  *
+  * Compenser le padding du menu et du logo
+  */
+  .navbar-collapse {
+    padding-left: 0px;
+  }
+  .logo {
+    padding-right: 15px;
+    z-index: 98;/*test pour émulateur safari*/
+  }
+  .navbar-nav {
+      margin: 0;
+  }
+  .region-sidebar-first {
+    border-bottom: 2px solid #86BC42;
+  }
 
-
-.menu--menu-secondaire > li > a {
-  width: 100%;
-}
-/* rendre menu primaire pleine largeur */
-#block-crise-main-menu {
-  float: none;
-}
-/* Annuler l'enchassement du slogan */
-/* 768px Safari Tablette : menu collé car le menu mobile n'est pas déclenché
-*
-* Compenser le padding du menu et du logo
-*/
-.navbar-collapse {
-  padding-left: 0px;
-}
-.logo {
-  padding-right: 15px;
-  z-index: 98;/*test pour émulateur safari*/
-}
-.navbar-nav {
-    margin: 0;
 }
 
-
-
-}
-
-/* Mobile  0-992px */
+/* Footer - 3 tailles à traiter */
 @media (max-width: 460px)  {
   /* Sur mobile, forcer l'alignement gauche-droite des blocs Boutons et Présentation*/
   .footer-first {
@@ -2078,11 +2079,11 @@ audio {
 
 
 
-/* Varia */
-
+/**
+* Varia 
+*/
 
 /*  Bootstrap Clearfix */
-
 
 /* Utilities */
 /* Remove gutter with a class : https://stackoverflow.com/a/19563497 */
@@ -2091,13 +2092,6 @@ audio {
     padding-left:0;
 }
 
-/*
-temp - Exception pour Page Recherche - Faire de la place pour  bouton réinitialiser 
-.path-recherche .views-exposed-form form {
-  width: 94%;
-}
-
-*/
 #views-exposed-form-environnement-recherche-page-1 .form-type-search-api-autocomplete {
   width: 80%;
 }
