--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -716,6 +716,9 @@ contextual-region block block-views block-views-exposed-filter-blockenvironnemen
 }
 
 
+
+
+
 /* Barre Grise (region Breadcrumb) */
 .page-header {
     padding-bottom: 0 !important;
@@ -2077,6 +2080,12 @@ audio {
     .footer-second {
       margin-left: -30px;
       margin-right: 30px;
+  }
+}
+/* Annuler règle Bootstrap sur la recherche */
+@media (max-width: 992px) {
+  .views-exposed-form > div {
+      width: 100%;
   }
 }
 
