--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2114,9 +2114,9 @@ audio {
 }
 
 #views-exposed-form-environnement-recherche-page-1 .form-type-search-api-autocomplete {
-  width: 80%;
+  /*width: 80%;*/
 }
 #crisecustom-search-form .form-group input.form-control {
-  max-width: 300px;
+ /* max-width: 300px;*/
 }
 
