--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2126,3 +2126,6 @@ audio {
 .path-bibliographie .region-header {
   display: flex;
 }
+.path-bibliographie .region-header p {
+  margin-bottom: 0;
+}
