--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -586,6 +586,7 @@ ul.list-social li {
 #block-views-exposed-filter-block-environnement-recherche-bibliographie-page-1 {
  /* width: 83%;
   float: left;*/
+  margin-bottom:0;
 }
 
 /* Liste Taxonomies */
@@ -2128,4 +2129,7 @@ audio {
 }
 .path-bibliographie .region-header p {
   margin-bottom: 0;
+}
+#block-block-content-f42d7565-ff15-4392-9969-8815a9e08493 {
+  margin-top: 0.2em;
 }
