--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2124,12 +2124,17 @@ audio {
  /* max-width: 300px;*/
 }
 
-.path-bibliographie .region-header {
+.path-bibliographie .region-header,
+.path-recherche .region-header {
   display: flex;
 }
-.path-bibliographie .region-header p {
+.path-bibliographie .region-header p,
+.path-recherche .region-header p {
   margin-bottom: 0;
 }
-#block-block-content-f42d7565-ff15-4392-9969-8815a9e08493 {
+#block-block-content-f42d7565-ff15-4392-9969-8815a9e08493,
+#block-reinitialiserrecherche {
   margin-top: 0.2em;
+  margin-left: 0.5em;
 }
+
