Reset des règles sur path-bibliographie et path-recherche

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -524,7 +524,7 @@ ul.list-social li {
 
 /* Recherche - Blocs de recherche*/
 .path-recherche {
-  .views-exposed-form {
+  /*.views-exposed-form {
     width: 83%;
     float: left;
   }
@@ -532,6 +532,7 @@ ul.list-social li {
     float: left;
     display: inline-block;
   }
+  
   #block-textepresentationrecherchegenerale {
      clear: both;
    }
@@ -544,7 +545,7 @@ ul.list-social li {
    .region-header #edit-search-api-fulltext {
      width: 100%;
      border-radius: 20px;
-   }
+   }*/
 
 }
 
